grammar_grammar.txt
# GRAMMAR GRAMMAR (I can't believe I'm making this)

<file> ::= <productionList> END.

<productionList> ::= <production> <productionList> | lambda.

<production> ::= NON_TERMINAL PRODUCES <rhs> PERIOD.

<rhs> ::= <rhsItem> <rhsItemList>.

<rhsItem> ::= <symbol> <symbolList>.

<symbol> ::= NON_TERMINAL | TERMINAL | LAMBDA.

<symbolList> ::= <symbol> <symbolList> | lambda.

<rhsItemList> ::= OR <rhsItem> <rhsItemList>.
